--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "dependencies": {
     "express": "4.10.2",
     "socket.io": "^1.4.5"
-  }
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "license": "MIT"
 }
